chore: add `format:check` script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "prepare": "husky",
     "commitlint": "commitlint --edit"
   },
