chore(eslint): add linting

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,9 +28,9 @@ jobs:
         run: |
           pnpm format:check
 
-      # - name: Lint 🧹
-      #   run: |
-      #     pnpm lint
+      - name: Lint 🧹
+        run: |
+          pnpm lint
 
       # - name: Test 🧪
       #   run: |
