test: add vitest with example spec

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,6 @@ jobs:
         run: |
           pnpm lint
 
-      # - name: Test 🧪
-      #   run: |
-      #     pnpm test
+      - name: Test 🧪
+        run: |
+          pnpm test
