--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format:check": "prettier --check .",
     "prepare": "husky",
     "commitlint": "commitlint --edit",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "vitest run",
+    "test:watch": "vitest dev"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
@@ -23,7 +25,8 @@
     "prettier": "^3.3.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.8.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vitest": "^2.1.2"
   },
   "packageManager": "pnpm@9.10.0+sha512.73a29afa36a0d092ece5271de5177ecbf8318d454ecd701343131b8ebc0c1a91c487da46ab77c8e596d6acf1461e3594ced4becedf8921b074fbd8653ed7051c",
   "license": "MIT"
