--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
   "license": "MIT",
   "dependencies": {
     "clsx": "^2.1.1",
+    "immer": "^10.1.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zustand": "5.0.0-rc.2"
   }
 }
