--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.13",
+    "tailwindcss-animated": "^1.1.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.8.0",
     "vite": "^5.4.1",
