refactor: setup for shadcn

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,9 @@
     "skipLibCheck": true,
     "allowJs": true,
     "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    },
     "jsx": "react-jsx",
 
     /* Bundler mode */
