--- a/.github/workflows/cd-main.yml
+++ b/.github/workflows/cd-main.yml
@@ -1,6 +1,10 @@
 name: Build and Deploy
 
-on: [push]
+on:
+  workflow_dispatch: {}
+  push:
+    branches:
+      - main
 
 permissions:
   contents: write
