build(actions): update build base for different workflows

--- a/.github/workflows/cd-preview.yml
+++ b/.github/workflows/cd-preview.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Install and Build 🔧
         if: github.event.action != 'closed'
+        env:
+          BUILD_BASE: /count-up/pr-preview/pr-${{ github.event.number }}
         run: |
           pnpm install
           pnpm build
