--- a/.github/workflows/cd-main.yml
+++ b/.github/workflows/cd-main.yml
@@ -22,6 +22,8 @@ jobs:
         uses: pnpm/action-setup@v4
 
       - name: Install and Build 🔧
+        env:
+          BUILD_BASE: /count-up/
         run: |
           pnpm install
           pnpm build
