--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup PNPM 🔨
         uses: pnpm/action-setup@v4
@@ -23,6 +25,16 @@ jobs:
       - name: Install 🏃
         run: |
           pnpm install
+
+      - name: Validate Last Commit Message 🔖
+        if: github.event_name == 'push'
+        run: |
+          pnpm commitlint --verbose --last
+
+      - name: Validate All Commit Messages 🔖
+        if: github.event_name == 'pull_request'
+        run: |
+          pnpm commitlint --verbose --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }}
 
       - name: Check Formatting 📚
         run: |
