--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.11.1",
     "@fast-check/vitest": "^0.1.3",
+    "@ls-lint/ls-lint": "^2.2.3",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
