--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,10 @@ jobs:
         run: |
           pnpm commitlint --verbose --from ${{ github.event.pull_request.head.sha }}~${{ github.event.pull_request.commits }} --to ${{ github.event.pull_request.head.sha }}
 
+      - name: Lint File Names 📛
+        run: |
+          pnpm ls-lint
+
       - name: Check Formatting 📚
         run: |
           pnpm format:check
