--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "fast-check": "^3.22.0",
     "globals": "^15.10.0",
     "husky": "^9.1.6",
+    "knip": "^5.33.3",
     "postcss": "^8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.13",
     "tailwindcss-animated": "^1.1.2",
-    "typescript": "^5.5.3",
+    "typescript": "^5.6.2",
     "typescript-eslint": "^8.8.0",
     "vite": "^5.4.1",
     "vitest": "^2.1.2"
@@ -53,7 +54,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7",
     "zustand": "5.0.0-rc.2"
   }
 }
