--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,10 @@ jobs:
         run: |
           pnpm lint
 
+      - name: Knip ✂️
+        run: |
+          pnpm knip
+
       - name: Test 🧪
         run: |
           pnpm test
