--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Setup NodeJS 🪚
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/iron
+
       - name: Setup PNPM 🔨
         uses: pnpm/action-setup@v4
 
